---
source: crates/embucket-functions/src/tests/string_binary/hex_encode.rs
description: "\"SELECT\n        HEX_ENCODE('string') AS from_string,\n        HEX_ENCODE(X'48656C6C6F') AS from_binary\""
---
Ok(
    [
        "+--------------+-------------+",
        "| from_string  | from_binary |",
        "+--------------+-------------+",
        "| 737472696E67 | 48656C6C6F  |",
        "+--------------+-------------+",
    ],
)
